--- a/project7style.css
+++ b/project7style.css
@@ -1,4 +1,4 @@
-#main-heading {
+id="main-heading" {
 		color: blue;
 		text-align: center;
 }
@@ -7,27 +7,25 @@ h2 {
     	text-align: center;
 }
 
-.place-description{
+class="place-description"{
 		font-family: Verdana;
 		font-color: olive;
 }
 
-.person-description{
+class="person-description"{
 		font-color: purple;
 }
 
-.top-favorite{
+class="top-favorite"{
 		font-color:red
 		font-size: bold
-		<span> strawberries </span>
 }
 
-.important-point{
+class="important-point"{
 		text-decoration: underline;
-		<span>He writes about the characters in a different way.</span>
 	
 }
 
-.emphasis{
+class="emphasis"{
 		font-style: italics;
 }
